Final fix for buggy spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -129,13 +129,18 @@ button{
     
         display: flex;
         justify-content: center;
-        gap: 20px;
+        gap: 60px;
         max-width: 100%;
+
+        margin: 20px;
     
 }
 .box{
     width: 150px;
+    width: 100%;
     height: 150px;
+
+    margin: 20px;
 
     border: 3px;
     border-style: solid;
@@ -158,7 +163,10 @@ button{
   .gray-container{
     background-color: #e5e7eb;
     padding: 56px 280px ;
-  }
+     /* Ensures it spans full viewport width */
+  max-width: 100%;
+}
+
 
   .quote{
     font-size: 36px;
